--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,58 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    border-radius: 10%;
-  }
-}
-
-.App-header {
-  /* background-color: #282c34; */
-  background-color: rgb(102, 169, 205);
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-button {
-	border-radius: 30%;
-	background-color: blanchedalmond;
-	padding: 15px;
-	font-size: medium;
-	font-weight: bold;
-}
-
-.icon{
-	width: 20px;
-	height: 20px;
-	border-radius: 50%;
-}
-
-.icon-text{
-	padding-right: 8px;
-}
-
-.Email {
-	display: flex;
-	padding-left: 20px;
-}
-
-#Email-Login {
-	margin-right: 20px;
-}
-
-#Email-Register {
-	margin-left: 20px;
-}
-
+ */
